[package]
name = "short-benchmark"
version = "0.1.0"
authors = ["Jeremy Rodi <me@retroc.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
short = { git = "https://github.com/medcat/short.git", branch = "main" }
tokio = { version = "0.2.22", features = ["full"] }
